--- a/website/templates/dashboard.html
+++ b/website/templates/dashboard.html
@@ -209,7 +209,47 @@
   <div class="col-sm-8"><div id="posts"></br >
     {% if totalresponses  > 0 %}
     <h2> What your users are saying:</h2><br>
-    {% for post in posts %}
+    
+<!--Here we have the section that controls pagination-->
+
+<!-- Pagination Links-->
+<div class="text-right">
+  <a href="/dashboard/{{user.username}}?page={{posts.prev_num}}"
+  
+     class="btn btn-outline-dark 
+     {% if posts.page == 1 %}disabled{% endif %}">
+      &laquo;
+  </a>
+<!-- Loop through the number of pages to display a link for each-->
+  {% for page_num in posts.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
+{% if page_num %}
+<!-- Check for the active page and set the link to "Active"-->
+          {% if posts.page == page_num %}
+          <a href="/dashboard/{{user.username}}?page={{ page_num }}"
+             class="btn btn-dark">
+              {{ page_num }}
+          </a>
+          {% else %}
+          <a href="/dashboard/{{user.username}}?page={{ page_num }}"
+             class="btn btn-outline-dark">
+              {{ page_num }}
+          </a>
+          {% endif %}
+      {% else %}
+          ...
+      {% endif %}
+  {% endfor %}
+  <a href="/dashboard/{{user.username}}?page={{posts.next_num}}"
+     class="btn btn-outline-dark 
+     {% if posts.page == posts.pages %}disabled{% endif %}">
+      &raquo;
+  </a>
+</div>
+<p class="text-right mt-3">
+ Showing page {{ posts.page }} of {{ posts.pages }}
+</p>
+<!-- End of Pagination Links-->
+    {% for post in posts.items %}
     <div class="card border-grey">
         {% if post.rating > 2 %}
         <div class="card-header d-flex bg-primary justify-content-between align-items-center">
@@ -324,6 +364,47 @@
       <div class="card-footer text-muted">{{post.date_created}}</div>
     </div>
   </br > {% endfor %}
+<!--Here we have the section that controls pagination-->
+
+<!-- Pagination Links-->
+<div class="text-right">
+  <a href="/dashboard/{{user.username}}?page={{posts.prev_num}}"
+  
+     class="btn btn-outline-dark 
+     {% if posts.page == 1 %}disabled{% endif %}">
+      &laquo;
+  </a>
+<!-- Loop through the number of pages to display a link for each-->
+  {% for page_num in posts.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
+{% if page_num %}
+<!-- Check for the active page and set the link to "Active"-->
+          {% if posts.page == page_num %}
+          <a href="/dashboard/{{user.username}}?page={{ page_num }}"
+             class="btn btn-dark">
+              {{ page_num }}
+          </a>
+          {% else %}
+          <a href="/dashboard/{{user.username}}?page={{ page_num }}"
+             class="btn btn-outline-dark">
+              {{ page_num }}
+          </a>
+          {% endif %}
+      {% else %}
+          ...
+      {% endif %}
+  {% endfor %}
+  <a href="/dashboard/{{user.username}}?page={{posts.next_num}}"
+     class="btn btn-outline-dark 
+     {% if posts.page == posts.pages %}disabled{% endif %}">
+      &raquo;
+  </a>
+</div>
+<p class="text-right mt-3">
+ Showing page {{ posts.page }} of {{ posts.pages }}
+</p>
+<!-- End of Pagination Links-->
+
+
   </div> 
   {% else %}
   <!-- If there are 0 posts we show this accordion helping the user getting started-->
