--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -287,17 +287,19 @@
             </div>
         </div>
     </section>
-    <!-- Footer-->
-    <footer class="bg-black text-center py-5">
-        <div class="container px-5">
-            <div class="text-white-50 small">
-                <div class="mb-2">&copy; Grapevine All Rights Reserved.</div>
-                <a href="#!">Privacy</a>
-                <span class="mx-1">&middot;</span>
-                <a href="#!">Terms</a>
-                <span class="mx-1">&middot;</span>
-                <a href="#!">FAQ</a>
-            </div>
-        </div>
-    </footer>
+                    <!-- Footer-->
+                    <footer class="bg-black text-center py-5">
+                        <div class="container px-5">
+                            <div class="text-white-50 small">
+                                <div class="mb-2">&copy; Grapevine All Rights Reserved.</div>
+                                <a href="/legal/privacy">Privacy</a>
+                                <span class="mx-1">&middot;</span>
+                                <a href="/legal/terms">Terms</a>
+                                <span class="mx-1">&middot;</span>
+                                <a href="/legal/pricing">Pricing</a>
+                                <span class="mx-1">&middot;</span>
+                                <a href="https://github.com/two-trick-pony-NL/GrapeVine">Github</a>
+                            </div>
+                        </div>
+                    </footer>
    
