--- a/website/templates/legal/pricing.html
+++ b/website/templates/legal/pricing.html
@@ -13,6 +13,10 @@
 <h2>Payment methods</h2>
 <p>Grapevine accepts iDeal payments and Credit cards. Both are handled by our payment partner bunq. </p>
 
+<h2>Terms and warranty</h2>
+<p>Payment is due everytime you surpass 100 new responses. Payment can done automatically from the dashboard. This counter is set back to 0 upon payment. If you have not paid you can't use Grapevine to view responses, however it will not disable the collection of new responses. </p>
+<p>Grapevine does not refund if you only use part of your 100 responses.  </p>
+
 <h2>Example</h2>
 <p>Laura started using grapevine and set up a survey using QR codes. Laura does not have to pay for this. After a while she receives more than 100 responses on her survey. Laura will get a notification to top
 up her account for €3,99. After she done so, she can receive another 100 responses before having to pay again.   </p>
