--- a/website/templates/legal/theme.html
+++ b/website/templates/legal/theme.html
@@ -122,18 +122,21 @@
 
 
             <!-- Footer-->
-    <footer class="bg-black text-center py-5">
-        <div class="container px-5">
-            <div class="text-white-50 small">
-                <div class="mb-2">&copy; Grapevine All Rights Reserved.</div>
-                <a href="#!">Privacy</a>
-                <span class="mx-1">&middot;</span>
-                <a href="#!">Terms</a>
-                <span class="mx-1">&middot;</span>
-                <a href="#!">FAQ</a>
-            </div>
-        </div>
-    </footer>
+            <!-- Footer-->
+            <footer class="bg-black text-center py-5">
+                <div class="container px-5">
+                    <div class="text-white-50 small">
+                        <div class="mb-2">&copy; Grapevine All Rights Reserved.</div>
+                        <a href="/legal/privacy">Privacy</a>
+                        <span class="mx-1">&middot;</span>
+                        <a href="/legal/terms">Terms</a>
+                        <span class="mx-1">&middot;</span>
+                        <a href="/legal/pricing">Pricing</a>
+                        <span class="mx-1">&middot;</span>
+                        <a href="https://github.com/two-trick-pony-NL/GrapeVine">Github</a>
+                    </div>
+                </div>
+            </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>  
