replacing signup with landingspage

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -88,7 +88,8 @@
                  {% endif%}
                  <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-dark rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                      <a class="btn bg-secondary-outline py-3 px-4 border-dark " href="/sign-in" >log in!</a>  
-                     <a class="btn bg-secondary py-3 px-4 border-dark " href="/sign-up" >Try for free!</a>  
+                     <!--<a class="btn bg-secondary py-3 px-4 border-dark " href="/sign-up" >Try for free!</a>  -->
+                     <a class="btn bg-secondary py-3 px-4 border-dark " href="getinvited" >Try for free!</a>
                  </button>
                  
                  <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -102,7 +103,8 @@
                      {% else %}
                          
                          <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 text-dark rounded" href="/sign-in">Sign In</a></li>
-                         <a class="btn bg-secondary py-3 px-4 border-dark " href="/sign-up" >Try for free!</a>  
+                         <!--<a class="btn bg-secondary py-3 px-4 border-dark " href="/sign-up" >Try for free!</a>  -->
+                         <a class="btn bg-secondary py-3 px-4 border-dark " href="getinvited" >Try for free!</a>
                      {% endif%}
                      </ul>
                  </div>
