--- a/website/templates/theme.html
+++ b/website/templates/theme.html
@@ -100,9 +100,8 @@
                         
                         <!--<a href="/createassets/{{user.username}}"class="btn btn-dark" role="button">Get Feedback now!</a>-->
                     {% else %}
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 text-dark rounded" href="/sign-up">Sign Up</a></li>
+                        <!--<li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 text-dark rounded" href="/sign-up">Sign Up</a></li> -->
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 text-dark rounded" href="/sign-in">Sign In</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 text-dark rounded" href="/demo">Demo</a></li>
                        
                     {% endif%}
                     </ul>
