--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -56,7 +56,7 @@
                     placeholder="Enter Password Again"
                   />
                   <br />
-                  <input class="form-check-input" type="checkbox"type="radio" name="option" id="option" value="accepted"> I accept the <a href="/terms">terms and conditions</a> of Grapevine </input<br>
+                  <input class="form-check-input" type="checkbox"type="radio" name="option" id="option" value="accepted"> I accept the <a href="/legal/terms">terms and conditions</a> of Grapevine </input<br>
                   <div align="center">
                     <button class="btn btn-primary" type="submit">Sign Up</button>
                   </div>
