--- a/website/templates/signin.html
+++ b/website/templates/signin.html
@@ -8,8 +8,9 @@
         <h1>Sign In to your account </h1>
         
         
-        <form method="POST">
-                <h3 align="center">Login</h3>
+        <form method="POST" class="row g-3">
+          <div class="col-md-12">
+                
                 <div class="form-group">
                   <label for="email">Email Address</label>
                   <input
@@ -17,20 +18,24 @@
                     id="email"
                     name="email"
                     class="form-control"
-                    placeholder="Enter Email"
+                    placeholder="Enter your Email"
                   />
+                  
                   <label for="password">Password</label>
                   <input
                     type="password"
                     id="password"
                     name="password"
                     class="form-control"
-                    placeholder="Enter Password"
-                  />
+                    placeholder="Enter your Password"
+                  /><div id="passwordHelpBlock" class="form-text">
+                    If you have forgotten your password email us at: grapevine@petervandoorn.com. We're still developping the password reset functionality
+                  </div>
                   <br />
                   <div align="center">
                     <button class="btn btn-primary" type="submit">Login</button>
                   </div>
+                </div>
                 </div>
               </form>  
 {% endblock%}
