--- a/website/templates/signin.html
+++ b/website/templates/signin.html
@@ -5,38 +5,99 @@
 
 {% block Content%}
 <br><br>
-        <h1>Sign In to your account </h1>
-        
-        
-        <form method="POST" class="row g-3">
-          <div class="col-md-12">
-                
-                <div class="form-group">
-                  <label for="email">Email Address</label>
-                  <input
-                    type="text"
-                    id="email"
-                    name="email"
-                    class="form-control"
-                    placeholder="Enter your Email"
-                  />
+<div class="container">
+  <div class="row">
+    <div class="col-md-7">
+      <h1>Sign In to your account </h1>
+    <form method="POST" class="row g-3">
+      
+            
+            <div class="form-group">
+              <label for="email">Email Address</label>
+              <input
+                type="text"
+                id="email"
+                name="email"
+                class="form-control"
+                placeholder="Enter your Email"
+              />
+              
+              <label for="password">Password</label>
+              <input
+                type="password"
+                id="password"
+                name="password"
+                class="form-control"
+                placeholder="Enter your Password"
+              /><div id="passwordHelpBlock" class="form-text">
+                If you have forgotten your password email us at: grapevine@petervandoorn.com. We're still developping the password reset functionality
+              </div>
+              <br />
+              <div align="center">
+                <button class="btn btn-primary" type="submit">Login</button>
+              </div>
+            </div>
+            
+          </form> 
+        </div> 
+        <div class="col-sm-2"> </div>
+
+
+    <div class="col-sm-3">
+      <h3>Now you're here, How do you like Grapevine?</h3>
+      <div class="card bg-primary" style="max-width: 100%">
+        <div class="row no-gutters">
+            
+            <div>
+                <div class="card-body">
+                  <h1 class="d-inline"><i class="bi bi-emoji-heart-eyes"></i></h1><h5 class="card-title d-inline"> I'm loving Grapevine</h5>
+  
+                  <div class="text-center">
+                      <img class="card-img-top bg-secondary" src="{{ url_for('static',filename='qrcodes/User_23_promotor.png')}}" style="max-width: 50%" alt="Card image cap">
+                    </div>
+                </div>    
+                </div>
+            </div>
+        </div>
+
+        <div class="card bg-secondary" style="max-width: 100%">
+        <div class="row no-gutters">
+            
+            <div>
+                <div class="card-body">
+                    <h1 class="d-inline"><i class="bi bi-emoji-expressionless"></i></h1><h5 class="card-title d-inline"> Could be better</h5>
+                    
+                    <div class="text-center">
+                      <img class="card-img-top bg-secondary" src="{{ url_for('static',filename='qrcodes/User_23_promotor.png')}}" style="max-width: 50%" alt="Card image cap">
+                    </div>
+                </div>    
+                </div>
+            </div>
+        </div>
+
+
+        <div class="card bg-third" style="max-width: 100%">
+          <div class="row no-gutters">
+              
+              <div>
+                  <div class="card-body">
+                      
+                      <h1 class="d-inline"><i class="bi bi-emoji-frown"></i></h1><h5 class="card-title d-inline"> Not so good</h5>
+                      <div class="text-center">
+                        <img class="card-img-top bg-secondary" src="{{ url_for('static',filename='qrcodes/User_23_promotor.png')}}" style="max-width: 50%" alt="Card image cap">
+                      </div>
+                  </div>    
+                  </div>
                   
-                  <label for="password">Password</label>
-                  <input
-                    type="password"
-                    id="password"
-                    name="password"
-                    class="form-control"
-                    placeholder="Enter your Password"
-                  /><div id="passwordHelpBlock" class="form-text">
-                    If you have forgotten your password email us at: grapevine@petervandoorn.com. We're still developping the password reset functionality
-                  </div>
-                  <br />
-                  <div align="center">
-                    <button class="btn btn-primary" type="submit">Login</button>
-                  </div>
-                </div>
-                </div>
-              </form>  
+              </div>
+          </div>
+
+        
+      </div>
+    </div>
+
+  </div>
+</div>
+
 {% endblock%}
         
