--- a/website/templates/chats/chatquestion3_new.html
+++ b/website/templates/chats/chatquestion3_new.html
@@ -36,7 +36,7 @@
       </div>
 
       <div class="msg-text">
-        {{question1}} 😄
+        {{question1}} 
       </div>
     </div>
   </div>
@@ -76,7 +76,7 @@
       </div>
 
       <div class="msg-text">
-        {{question2}} 😄
+        {{question2}}
       </div>
     </div>
   </div>
