--- a/website/templates/chats/thanks_new.html
+++ b/website/templates/chats/thanks_new.html
@@ -6,7 +6,7 @@
 <div class="msg right-msg">
     <div
      class="msg-img"
-     style="background-image: url(https://image.flaticon.com/icons/svg/145/145867.svg)"
+     style="background-image: url({{ url_for('static',filename='assets/img/customer-review.png') }})"
     ></div>
 
     <div class="msg-bubble">
@@ -26,7 +26,7 @@
   <div class="msg left-msg">
     <div
      class="msg-img"
-     style="background-image: url(https://image.flaticon.com/icons/svg/327/327779.svg)"
+     style="background-image: url({{ url_for('static',filename='assets/img/blogger.png') }})"
     ></div>
 
     <div class="msg-bubble">
@@ -36,7 +36,7 @@
       </div>
 
       <div class="msg-text">
-        {{question1}} 😄
+        {{question1}} 
       </div>
     </div>
   </div>
@@ -46,7 +46,7 @@
 <div class="msg right-msg">
     <div
      class="msg-img"
-     style="background-image: url(https://image.flaticon.com/icons/svg/145/145867.svg)"
+     style="background-image: url({{ url_for('static',filename='assets/img/customer-review.png') }})"
     ></div>
 
     <div class="msg-bubble">
@@ -62,11 +62,11 @@
   </div>
   <!-- EndMessage right-->
 
-  <!-- Message left-->
-  <div class="msg left-msg">
+<!-- Message left-->
+<div class="msg left-msg">
     <div
      class="msg-img"
-     style="background-image: url(https://image.flaticon.com/icons/svg/327/327779.svg)"
+     style="background-image: url({{ url_for('static',filename='assets/img/blogger.png') }})"
     ></div>
 
     <div class="msg-bubble">
@@ -76,17 +76,17 @@
       </div>
 
       <div class="msg-text">
-        {{question3}} 😄
+        {{question1}} 
       </div>
     </div>
   </div>
-  <!-- End message Left -->
+  <!-- End message Left -->  
 
   <!-- Message right-->
 <div class="msg right-msg">
     <div
      class="msg-img"
-     style="background-image: url(https://image.flaticon.com/icons/svg/145/145867.svg)"
+     style="background-image: url({{ url_for('static',filename='assets/img/customer-review.png') }})"
     ></div>
 
     <div class="msg-bubble">
@@ -106,7 +106,7 @@
   <div class="msg left-msg">
     <div
      class="msg-img"
-     style="background-image: url(https://image.flaticon.com/icons/svg/327/327779.svg)"
+     style="background-image: url({{ url_for('static',filename='assets/img/blogger.png') }})"
     ></div>
 
     <div class="msg-bubble">
