--- a/website/templates/chats/chatquestion2_new.html
+++ b/website/templates/chats/chatquestion2_new.html
@@ -6,7 +6,7 @@
 <div class="msg right-msg">
     <div
      class="msg-img"
-     style="background-image: url(https://image.flaticon.com/icons/svg/145/145867.svg)"
+     style="background-image: url({{ url_for('static',filename='assets/img/customer-review.png') }})"
     ></div>
 
     <div class="msg-bubble">
@@ -26,7 +26,7 @@
   <div class="msg left-msg">
     <div
      class="msg-img"
-     style="background-image: url(https://image.flaticon.com/icons/svg/327/327779.svg)"
+     style="background-image: url({{ url_for('static',filename='assets/img/blogger.png') }})"
     ></div>
 
     <div class="msg-bubble">
@@ -36,7 +36,7 @@
       </div>
 
       <div class="msg-text">
-        {{question1}} 😄
+        {{question1}} 
       </div>
     </div>
   </div>
